[gd_scene load_steps=46 format=2]

[ext_resource path="res://sprites/efeitos_jogo/2DLight.png" type="Texture" id=1]
[ext_resource path="res://sprites/inimigos/flecha_yaka/flecheira5.png" type="Texture" id=2]
[ext_resource path="res://sprites/inimigos/flecha_yaka/flecheira3.png" type="Texture" id=3]
[ext_resource path="res://sprites/inimigos/flecha_yaka/flecheira4.png" type="Texture" id=4]
[ext_resource path="res://sprites/inimigos/flecha_yaka/flecheira1.png" type="Texture" id=5]
[ext_resource path="res://sprites/inimigos/flecha_yaka/flecheira2.png" type="Texture" id=6]
[ext_resource path="res://scripts/inimigos/yondu_girl.gd" type="Script" id=7]
[ext_resource path="res://sprites/inimigos/flecha_yaka/furacao13.png" type="Texture" id=8]
[ext_resource path="res://sprites/inimigos/flecha_yaka/furacao15.png" type="Texture" id=9]
[ext_resource path="res://sprites/inimigos/flecha_yaka/furacao16.png" type="Texture" id=10]
[ext_resource path="res://sprites/inimigos/flecha_yaka/furacao18.png" type="Texture" id=11]
[ext_resource path="res://sprites/inimigos/flecha_yaka/furacao2.png" type="Texture" id=12]
[ext_resource path="res://sprites/inimigos/flecha_yaka/furacao6.png" type="Texture" id=13]
[ext_resource path="res://sprites/inimigos/flecha_yaka/furacao19.png" type="Texture" id=14]
[ext_resource path="res://sprites/inimigos/flecha_yaka/furacao17.png" type="Texture" id=15]
[ext_resource path="res://sprites/inimigos/flecha_yaka/furacao8.png" type="Texture" id=16]
[ext_resource path="res://sprites/inimigos/flecha_yaka/furacao11.png" type="Texture" id=17]
[ext_resource path="res://sprites/inimigos/flecha_yaka/furacao14.png" type="Texture" id=18]
[ext_resource path="res://sprites/inimigos/flecha_yaka/furacao20.png" type="Texture" id=19]
[ext_resource path="res://sprites/inimigos/flecha_yaka/furacao4.png" type="Texture" id=20]
[ext_resource path="res://sprites/inimigos/flecha_yaka/furacao12.png" type="Texture" id=21]
[ext_resource path="res://sprites/inimigos/flecha_yaka/furacao1.png" type="Texture" id=22]
[ext_resource path="res://sprites/inimigos/flecha_yaka/furacao5.png" type="Texture" id=23]
[ext_resource path="res://sprites/inimigos/flecha_yaka/furacao7.png" type="Texture" id=24]
[ext_resource path="res://sprites/inimigos/flecha_yaka/furacao10.png" type="Texture" id=25]
[ext_resource path="res://sprites/inimigos/flecha_yaka/furacao3.png" type="Texture" id=26]
[ext_resource path="res://sprites/inimigos/flecha_yaka/furacao9.png" type="Texture" id=27]
[ext_resource path="res://sprites/inimigos/flecha_yaka/idle_flecheira1.png" type="Texture" id=28]
[ext_resource path="res://sprites/inimigos/flecha_yaka/idle_flecheira2.png" type="Texture" id=29]
[ext_resource path="res://sprites/inimigos/flecha_yaka/idle_flecheira3.png" type="Texture" id=30]
[ext_resource path="res://sprites/inimigos/flecha_yaka/idle_flecheira4.png" type="Texture" id=31]
[ext_resource path="res://sprites/inimigos/flecha_yaka/idle_flecheira5.png" type="Texture" id=32]
[ext_resource path="res://sprites/inimigos/flecha_yaka/portal5.png" type="Texture" id=33]
[ext_resource path="res://sprites/inimigos/flecha_yaka/portal4.png" type="Texture" id=34]
[ext_resource path="res://sprites/inimigos/flecha_yaka/portal2.png" type="Texture" id=35]
[ext_resource path="res://sprites/inimigos/flecha_yaka/portal6.png" type="Texture" id=36]
[ext_resource path="res://sprites/inimigos/flecha_yaka/portal3.png" type="Texture" id=37]
[ext_resource path="res://sprites/inimigos/flecha_yaka/portal1.png" type="Texture" id=38]

[sub_resource type="CapsuleShape2D" id=3]
radius = 33.0
height = 30.0

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 365.5, 113.5 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 22 ), ExtResource( 12 ), ExtResource( 26 ), ExtResource( 20 ), ExtResource( 23 ), ExtResource( 13 ), ExtResource( 24 ), ExtResource( 16 ), ExtResource( 27 ), ExtResource( 25 ), ExtResource( 17 ), ExtResource( 21 ), ExtResource( 8 ), ExtResource( 18 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 15 ), ExtResource( 11 ), ExtResource( 14 ), ExtResource( 19 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 36 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=8]
resource_name = "abrir_portal"
length = 0.33
step = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0291379, 0.0582758, 0.0888998, 0.117082, 0.145265, 0.173447, 0.201629, 0.227636, 0.253642, 0.279648, 0.303478, 0.32 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ null, ExtResource( 36 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 37 ), ExtResource( 35 ), ExtResource( 38 ), ExtResource( 35 ), ExtResource( 37 ), ExtResource( 34 ), ExtResource( 33 ), ExtResource( 36 ), null ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.028197, 0.32042 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[node name="yondu_girl" type="KinematicBody2D"]
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 9 )
shape = SubResource( 3 )

[node name="idle_sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.25, 0.2 )
frames = SubResource( 6 )
frame = 3
playing = true
flip_h = true
__meta__ = {
"_edit_group_": true
}

[node name="Light2D" type="Light2D" parent="idle_sprite"]
texture = ExtResource( 1 )
texture_scale = 0.5
color = Color( 0, 0.764706, 1, 1 )
energy = 1.81

[node name="sprite" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 0.25, 0.2 )
frames = SubResource( 2 )
frame = 3
playing = true
flip_h = true
__meta__ = {
"_edit_group_": true
}

[node name="Light2D" type="Light2D" parent="sprite"]
texture = ExtResource( 1 )
texture_scale = 0.5
color = Color( 0, 0.764706, 1, 1 )
energy = 1.81

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource( 4 )

[node name="sprite_furacao_up" type="AnimatedSprite" parent="."]
position = Vector2( -2, 30 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 5 )
frame = 5
playing = true

[node name="sprite_furacao_down" type="AnimatedSprite" parent="."]
position = Vector2( -2, 48 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 5 )
frame = 5
playing = true
flip_v = true

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -2, 36 )
scale = Vector2( 0.25, 0.2 )
texture = ExtResource( 1 )
texture_scale = 0.5
color = Color( 0.266667, 0, 1, 1 )
energy = 7.33

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -196, -42 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="portal" type="Sprite" parent="."]
visible = false
position = Vector2( -201, -42 )
texture = ExtResource( 36 )

[node name="Light2D" type="Light2D" parent="portal"]
texture = ExtResource( 1 )
texture_scale = 0.3
energy = 2.15

[node name="anim" type="AnimationPlayer" parent="."]
root_node = NodePath("../portal")
anims/RESET = SubResource( 7 )
anims/abrir_portal = SubResource( 8 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="atirar"]
